syntax = "proto3";
package base.v1;

option go_package = "github.com/Permify/permify/pkg/pb/base/v1";

import "validate/validate.proto";

// Tuple
message Tuple {
  Entity entity = 1 [(validate.rules).message.required = true];

  string relation = 2 [(validate.rules).string = {
    pattern : "^([a-z][a-z0-9_]{1,62}[a-z0-9])$",
    max_bytes : 64,
  }];

  Subject subject = 3 [(validate.rules).message.required = true];
}

// Tuples
message Tuples {
  repeated Tuple tuples = 1;
}

// Entity
message Entity {
  string type = 1 [(validate.rules).string = {
    pattern : "^([a-z][a-z0-9_]{1,62}[a-z0-9])$",
    max_bytes : 64,
  }];

  string id = 2 [(validate.rules).string = {
    pattern : "^(([a-zA-Z0-9_][a-zA-Z0-9_|-]{0,127})|\\*)$",
    max_bytes : 128,
  }];
}

message EntityAndRelation {
  Entity entity = 1 [(validate.rules).message.required = true];

  string relation = 2 [(validate.rules).string = {
    pattern : "^([a-z][a-z0-9_]{1,64}[a-z0-9])$",
    max_bytes : 64,
  }];
}

// Subject
message Subject {
  string type = 1 [(validate.rules).string = {
    pattern : "^([a-z][a-z0-9_]{1,62}[a-z0-9])$",
    max_bytes : 64,
  }];

  string id = 2 [(validate.rules).string = {
    pattern : "^(([a-zA-Z0-9_][a-zA-Z0-9_|-]{0,127})|\\*)$",
    max_bytes : 128,
  }];

  string relation = 3 [(validate.rules).string = {
    pattern : "^([.&a-z][.&a-z0-9_]{1,62}[.&a-z0-9])$",
    max_bytes : 64,
    ignore_empty: true,
  }];
}

// Filters

message TupleFilter {
  EntityFilter entity = 1 [(validate.rules).message.required = true];

  string relation = 2 [(validate.rules).string = {
    pattern : "^([a-z][a-z0-9_]{1,62}[a-z0-9])$",
    max_bytes : 64,
    ignore_empty: true,
  }];

  SubjectFilter subject = 3;
}

message EntityFilter {
  string type = 1 [(validate.rules).string = {
    pattern : "^([a-z][a-z0-9_]{1,62}[a-z0-9])$",
    max_bytes : 64,
  }];

  string id = 2 [(validate.rules).string = {
    pattern : "^(([a-zA-Z0-9_][a-zA-Z0-9_|-]{0,127})|\\*)$",
    max_bytes : 128,
    ignore_empty: true,
  }];
}

// Subject
message SubjectFilter {
  string type = 1 [(validate.rules).string = {
    pattern : "^([a-z][a-z0-9_]{1,62}[a-z0-9])$",
    max_bytes : 64,
    ignore_empty: true,
  }];

  string id = 2 [(validate.rules).string = {
    pattern : "^(([a-zA-Z0-9_][a-zA-Z0-9_|-]{0,127})|\\*)$",
    max_bytes : 128,
    ignore_empty: true,
  }];

  string relation = 3 [(validate.rules).string = {
    pattern : "^([.&a-z][.&a-z0-9_]{1,62}[.&a-z0-9])$",
    max_bytes : 64,
    ignore_empty: true,
  }];
}

// ExpandTreeNode
message ExpandTreeNode {
  // Operation
  enum Operation {
    INVALID = 0;
    UNION = 1;
    INTERSECTION = 2;
    ROOT = 3;
  }

  Operation operation = 1;

  repeated Expand children = 2;
}

// Expand
message Expand {
  EntityAndRelation target = 1;

  oneof node {
    ExpandTreeNode expand = 2;
    Subjects leaf = 3;
  }
}

// Subjects
message Subjects {
  bool exclusion = 1;
  repeated Subject subjects = 2;
}